Make width of list cells stretch to fix previous gap on right

--- a/apps/bus_detective_web/assets/css/components/flex.scss
+++ b/apps/bus_detective_web/assets/css/components/flex.scss
@@ -24,7 +24,7 @@
     }
 
     &--large {
-      width: calc(100% - 28px);
+      width: 100%;
     }
   }
 
